--- a/static/css/orgullopr.css
+++ b/static/css/orgullopr.css
@@ -1,7 +1,9 @@
 /* layout.html start */
 body {
-    background-color: rgba(93,195,243,1);
-    font-family: 'Capriola', serif;
+    background-color: rgba(72,91,210,1);
+
+);
+    font-family: 'Montserrat', serif;
 }
 footer {
     background-color: rgba(207,207,207,1);
@@ -30,10 +32,10 @@ div.video {
 }
 .header-title a{
     text-decoration: none;
-    color: rgba(255, 255, 106, 1);
+    color: white;
     display: table-cell;
     vertical-align: middle;
-    font-family: "Open Sans" sans-serif;
+    font-family: "montserrat" sans-serif;
     font-weight: 700;
     font-size: xx-large;
 
@@ -47,7 +49,7 @@ div.video {
   text-align: center;
   color: rgba(253,253,87,1);
   padding: 0 0 15px 0;
-  font-family: "Open Sans" sans-serif;
+  font-family: "montserrat" sans-serif;
   font-weight: 700;
   font-size: x-large;
   height: 1.5em;
@@ -57,6 +59,7 @@ div.video {
     width: 70%;
     text-align: center;;
 }
+
 .nav-sun {
     float: left;
     height: 4em;
@@ -66,11 +69,12 @@ div.video {
     margin: 0 15px;
 }
 ul.nav-menu, ul.footer-links {
-    font-family: "Open Sans", sans-serif;
+    font-family: "montserrat", sans-serif;
     font-weight: 700;
     height: 4em;
     padding: 0;
     margin: 0;
+    background-color: rgba(151, 232, 193)
 }
 ul.nav-menu li {
     float: right;
@@ -81,7 +85,7 @@ ul.nav-menu li {
     padding: 0 5px;
 }
 ul.nav-menu li:hover {
-    background-color: rgba(72,91,210,1);
+    background-color: rgba(179, 212, 252);
 }
 ul.nav-menu li a {
     text-align: center;
@@ -133,7 +137,7 @@ ul.footer-links li:hover{
 }
 .question, .about {
     vertical-align: middle;
-    float: left;
+    float: center;
     /*height: 100%;*/
     width: 50%;
 }
@@ -144,7 +148,7 @@ ul.footer-links li:hover{
 .question p {
     margin: 0 auto 1em;
     text-align: left;
-    padding: 0 2em;
+    padding: 0 5em;
 }
 .about li {
     padding-right: 2em;
@@ -158,7 +162,7 @@ ul.footer-links li:hover{
 .btn {
     float: none;
     clear: both;
-    font-family: 'Capriola', sans-serif;
+    font-family: 'montserrat', sans-serif;
     font-size: x-large;
     font-weight: 600;
     white-space: nowrap;
@@ -178,7 +182,7 @@ ul.footer-links li:hover{
 }
 .btn:hover > span,
 .btn:focus > span {
-    background: rgba(140, 241, 137, 1);
+    background: #97e8c1;
 }
 .btn:active > span {
     background: rgba(52, 207, 44, 1);
@@ -208,7 +212,7 @@ ul.footer-links li:hover{
     border-top: 1px solid rgb(173, 175, 173);
 }
 .input-form legend {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'montserrat', sans-serif;
     font-weight: 800;
     font-size: x-large;
 }
@@ -243,7 +247,7 @@ ul.footer-links li:hover{
 }
 .input-form input, .input-form textarea, .input-form select {
     border: 1px solid rgba(170, 170, 170, 1);
-    box-shadow: 0px 0px 3px rgba(204, 204, 204, 1), 0 10px 15px rgba(234, 234, 234, 1) inset;
+    box-shadow: 0px 0px 3px rgba(204, 204, 204, 1), 0 10px 15px white inset;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
