--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
     		<meta charset="utf-8">
         	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        	<title> {% block title %}{% endblock %} - orgulloPR.com</title>
+        	<title> {% block title %}{% endblock %} - sucess-stories.com</title>
 
         	<meta name="description" content="">
         	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,11 +27,10 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <header>
-            <div class="nav-sun"></div><div class="header-title"><a href="/">OrgulloPR</a></div>
+            <div class="nav-sun"></div><div class="header-title"><a href="/">Historias de éxito</a></div>
             <nav>
                 <ul class="nav-menu">
-                    <li><a href="#" ><span class="menu-text">SOBRE</span></a></li>
-                    <li><a href="#send-story" class="send-story"><span class="menu-text">ENVIANOS TU HISTORIA</span></a></li>
+                    <li><a href="#send-story" class="send-story"><span class="menu-text">SUBE TU HISTORIA</span></a></li>
                     <li><a href="#"><span class="menu-text">EXPLORA</span></a></li>
                 </ul>
 
@@ -40,9 +39,8 @@
 		<div id="content"> {% block content %}{% endblock %} </div>
 		<footer>
             <ul class="footer-links">
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">CONTACT</a></li>
-                <li><a href="#">PRESS</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Prensa</a></li>
             </ul>
 		</footer>
         {% block scripts %}
