--- a/static/css/normalize.css
+++ b/static/css/normalize.css
@@ -383,9 +383,11 @@ fieldset {
 
 legend {
     border: 0; /* 1 */
-    padding: 0;
+    padding: 10px;
+    margin-top: 10px;
     white-space: normal; /* 2 */
-    *margin-left: -7px; /* 3 */
+    margin-left: 30%; /* 3 */
+    position: center;
 }
 
 /**
