--- a/static/css/orgullopr.css
+++ b/static/css/orgullopr.css
@@ -60,13 +60,30 @@ div.video {
     text-align: center;;
 }
 
+#map h1 span {
+    position: relative;
+}
+#map h1 span span {
+    position: absolute;
+    color: rgba(72,91,210,1);
+    top: 14px;
+    text-align: middle;
+    left: 39px;
+    font-size: 70%;
+    letter-spacing: 0.5pt;
+}
+#map h1 {
+    position: relative;
+    
+
+}
 .nav-sun {
     float: left;
-    height: 4em;
-    width: 60px;
-    background: url("/static/img/Sun.png");
+    height: 70px;
+    width: 70px;
+    background: url("http://cl.ly/WXYi/logo.jpg");
     background-size: cover;
-    margin: 0 15px;
+    margin: 5px 15px;
 }
 ul.nav-menu, ul.footer-links {
     font-family: "montserrat", sans-serif;
@@ -215,6 +232,7 @@ ul.footer-links li:hover{
     font-family: 'montserrat', sans-serif;
     font-weight: 800;
     font-size: x-large;
+    position: center;
 }
 .input-form ul {
     list-style-type: none;
@@ -224,7 +242,6 @@ ul.footer-links li:hover{
 }
 .input-form li {
     padding: 12px;
-    border-bottom: 1px solid rgba(238, 238, 238, 1);
     position: relative;
 }
 .input-form label {
@@ -326,7 +343,7 @@ button.submit:active {
 #map {
     margin: 0 auto;
     width: 100%;
-    padding-top: 2em;
+    padding-top: 1em;
 }
 
 #map h1 {
