Making awesome changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             <div class="form-wrapper">
                             <a name="send-story"></div>
             <div class="button-wrapper">
-                <a class="btn"><span>SUBE TU HISTORIA</span></a>
+                <a class="btn" href="/subir"><span>SUBE TU HISTORIA</span></a>
             </div>
     {% block scripts %}
         {{ super() }}
