--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,8 +30,9 @@
             <!--<div class="nav-sun"></div><div class="header-title"><a href="/">Biz Wallet - historias de negocios</a></div>
             <nav>-->
                 <ul class="nav-menu">
-                    <li><a href="#send-story" class="send-story"><span class="menu-text">SUBE TU HISTORIA</span></a></li>
-                    <li><a href="#"><span class="menu-text">EXPLORA LAS HISTORIAS</span></a></li>
+                    <li><a href="/subir" class="send-story"><span class="menu-text">SUBE TU HISTORIA</span></a></li>
+                    <li><a href="/explora"><span class="menu-text">EXPLORA LAS HISTORIAS</span></a></li>
+                    <li><a href="/sobre"><span class="menu-text">SOBRE</span></a></li>
                 </ul>
 
             </nav>
