--- a/templates/explora.html
+++ b/templates/explora.html
@@ -1,4 +1,15 @@
-explora.html
+{% extends "layout.html" %}
+{% block title %}Subir - Historias de Negocios - Puerto Rico{% endblock %}
+{% block head %}
+	{{ super() }}
+	<!-- any local css/styling should be put here -->
+{% endblock %}
+{% block content %}
+
+
+
+
+{% endblock %}
 
 
 
