--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -6,15 +6,16 @@
 {% endblock %}
 {% block content %}
 
-<div class="container">
+<!--<div class="container">
   <div class="row">
   	<div class="col-md-8 col-md-offset-2">
 			<h1>Sobre Historias de negocios</h1>
-			<h3>Small business is under pressure in Puerto Rico. Historias de Negocios believes it is time for small business to stand up and be counted by sharing our views and stories, to help change the way things work. Tell us how your small business is faring and what the barriers are to your enterprise developing and growing.
+			<h3>Los pequeños negocios están en riesgo en Puerto Rico. Historias de Negocios cree que es un buen momento para que los pequeños empresarios aparezcan y cuenten sus historias y desafíos y barreras que encuentran para crecer.
 			</h3>
 			<br/>
 			<p align="">
-				A few small tweaks to how you approach a community of peers will make all the difference in how fast you can bounce back from challenges.
+				<h3>Creemos que el compartir la historia de tu negocio y tus desafios con tus pares va ayudarte a navegar tus dilemas y problemas. As it relates to challenges, sharing your dilemma with positive people who are non-competitive, don't work for you and share similar goals is a fantastic starting point. 
+				We've launched the QB Self-Employed community to make finding peers who you respect, admire and can help you. We are stronger together, baby. A much faster way to master the specifics of a challenging situation is for a community of peers to share what *they* did to navigate their own dilemmas. Stories trump advice. Every. Time.   </h3> 
 				<br/>
 			</p>
 			<br/>
@@ -26,7 +27,25 @@
 			<br/>
   	</div>
   </div>
-</div>
+</div>-->
 
+
+  <div class="container">
+  <div class="row">
+  <div class="col-lg-4">
+   <h2>Meet Owners Like You</h2>
+     <p>Plug into a rich network of smart, small business owners just like you.</p>
+     </div>
+   <div class="row">
+  <div class="col-lg-4">
+   	<h2>Learn With Your Peers</h2>
+      <p>Get and give support with people pursuing the same goals or dealing with same challenges.</p>
+    </div>
+  <div class="row">
+  <div class="col-lg-4">
+   	<h2>Promote your endeavor</h2>
+      <p>Build professional connections and uncover effective business strategies.</p>
+   </div>
+</div>
 
 {% endblock %}
