We can add stories :)

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,8 +30,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <header>
-            <!--<div class="nav-sun"></div><div class="header-title"><a href="/">Biz Wallet - historias de negocios</a></div>
-            <nav>-->
+            <!--<div class="nav-sun"></div><div class="header-title"><a href="/">Biz Wallet - historias de negocios</a></div> -->
+            <nav>
                 <ul class="nav-menu">
                     <li><a href="/subir" class="send-story"><span class="menu-text">SUBE TU HISTORIA</span></a></li>
                     <li><a href="/explora"><span class="menu-text">EXPLORA LAS HISTORIAS</span></a></li>
