Some more fixes

--- a/static/css/orgullopr.css
+++ b/static/css/orgullopr.css
@@ -54,7 +54,7 @@ div.video {
     vertical-align: middle;
     font-family: "montserrat" sans-serif;
     font-weight: 700;
-    font-size: xx-large;
+    font-size: large;
 
 }
 .wrapper {
