--- a/templates/subir.html
+++ b/templates/subir.html
@@ -13,6 +13,10 @@
 			<input type="text" id="name" name="name" placeholder="Entre su nombre" required="true"/>
 		</li>
 		<li>
+			<label for="email">Tu email</label>
+			<input type="email" id="email" name="email" placeholder="Entre su email" required="true"/>
+		</li>
+		<li>
 			<label for="prof">El Nombre del negocio</label>
 			<input type="text" id="prof" name="prof" placeholder="Entra el nombre del negocio" required="true"/>
 		</li>
